--- a/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "Index" = "شاخص";
 "Portfolio" = "پرتفوی";
 "News" = "اخبار";
-
+"Done" = "تایید";
 //-Mark : Setting View Controlle Strings
 "SwitchLanguage" = "تغییر زبان";
 "Cancel" = "لغو";
