SABADBAN-220 20.0 Add: portfolio ViewController and symbols Details added

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -15,7 +15,7 @@
 "Index" = "Index";
 "Portfolio" = "Portfolio";
 "News" = "News";
-
+"Done" = "Done";
 //MARK :- Setting View Controller Strings
 "Language" = " Language ";
 "SwitchLanguage" = "Switch Language";
