SABADBAN-256 2 about us view control is added

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -52,3 +52,10 @@
 "AddPortfolio" = "Add Portfolio";
 "DeletePortfolio" = "Delete Portfolio";
 "EnterPortfolioName" = "Enter Portfolio Name:";
+
+//MARK: - AboutUs Strings
+
+"AllrightsReserved" = "All rights resereved for SefrYek Co.";
+"UpdateDataIntervalNotice" = "UpdateDataIntervalNotice";
+"ReleaseDate" = "Release Date:";
+"Version" = "Version";
