SABADBAN-256 4 volume, number and name sort is added to symbol list in index. persian string compare method is added.

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -44,6 +44,9 @@
 "Volume" = "Volume";
 "Amount" = "Amount";
 
+"indexInfo" = "Index information";
+"marketInfo" = "Market information";
+
 //MARK: - Portfolio Strings
 
 "AddSymbol" = "Add Symbol";
