--- a/trunk/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/trunk/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "AddPortfolio" = "Add Portfolio";
 "DeletePortfolio" = "Delete Portfolio";
 "EnterPortfolioName" = "Enter Portfolio Name:";
-
+"BuyInformation" = "Buy Information";
 //MARK: - AboutUs Strings
 
 "AllrightsReserved" = "All rights resereved for SefrYek Co.";
