--- a/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "AddPortfolio" = "افزودن پرتفوی";
 "DeletePortfolio" = "حذف پرتفوی";
 "EnterPortfolioName" = "نام پرتفوی را وارد  کنید:";
-
+"BuyInformation" = "اطلاعات خرید سهم";
 //MARK: - AboutUs Strings
 
 "AllrightsReserved" = "تمامی حقوق مادی و معنوی این نرم افزار متعلق به شرکت صفریک ایده همراه می باشد.";
