SABADBAN-264 16.0 Add: BuyInfo , Request Class and Login Fixed

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "Portfolio" = "Portfolio";
 "News" = "News";
 "Done" = "Done";
+"Warning" = "Warning";
 //MARK :- Setting View Controller Strings
 "Language" = " Language ";
 "SwitchLanguage" = "Switch Language";
