--- a/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "Portfolio" = "پرتفوی";
 "News" = "اخبار";
 "Done" = "تایید";
+"Warning" = "هشدار";
 //-Mark : Setting View Controlle Strings
 "SwitchLanguage" = "تغییر زبان";
 "Cancel" = "لغو";
