SABADBAN-256 8 Change services requests to request.postData . Change email regex, add network alert dialog in base view controller. and post network error message from request class. Add request model structs to project. add news response.

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -99,3 +99,6 @@
 "phoneNumberLengthError" = "phoneNumberLengthError";
 "emailRegisterdBefore" = "emailRegisterdBefore";
 "unknownRegisterError" = "unknownRegisterError";
+
+//MARK: - Global String
+"noInternet" = "No Internet connection";
