SABADBAN-315 8.0 Fixed: some issues Resolved

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -20,6 +20,8 @@
 "Warning" = "Warning";
 "Back" = "Back";
 "Successful" = "Successful";
+"Faild" = "Faild! \n Try Again...";
+
 //MARK :- Setting View Controller Strings
 "Language" = " Language ";
 "SwitchLanguage" = "Switch Language";
