SABADBAN-307 7.30 Fix: iPad views fixed

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -114,7 +114,7 @@
 
 //MARK: - Global String
 "noInternet" = "No Internet connection";
-
+"ConnectionTimeOut" = "Connection TimeOut! \n try again...";
 //MARK: - Symbol Details
 "bestBuyTitle" = "bestBuyTitle";
 "bestSellTitle" = "bestSellTitle";
