SABADBAN-412 3 convert news time to persian date. add persian date converter closure. add some validation dialogs. change buy info date to persian date

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -80,6 +80,10 @@
 "allowed" = "allowed";
 "symbolExists" = "symbolExists";
 "nameDuplicate" = "نام پرتفوی تکراری است.";
+"addPortfolioPlease" = "Please add a Portfolio.";
+"enterDatePlease" = "Please enter the Date.";
+"enterPricePlease" = "Please enter the Price.";
+"enterQuantityPlease" = "Please enter the Quantity.";
 
 //MARK: - AboutUs Strings
 
