SABADBAN-256 1 add forget password view controller

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -150,3 +150,8 @@
 "pleaseEnterDetails" = "Please Enter Message Description";
 
 
+//MARK: - Forget Password Strings
+
+"forgetPasswordDescription" = "Please enter your email to recieve password change E-mail";
+"forgetPasswordSendKey" = "Send Email";
+
