SABADBAN-460 4 add check version code service. fix updating portfolio issue after editing, change done button in add portfolio , remove chart segue, set value of pop up textfields

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -158,3 +158,6 @@
 "changePasswordSuccessMessage" = "New password has been sent to your E-mail. Please check your E-mail.";
 "emailNotFound" = "This email doesn't exist in our database.";
 
+//MARK: - Check version Strings
+"download" = "Download";
+
