SABADBAN-482 6 Add logout Service. add global service error. Add Users table and change portfolio queries to show different portfolios for different users. add jail break check and agreement. set service refresh interval from server input.

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -123,6 +123,7 @@
 //MARK: - Global String
 "noInternet" = "No Internet connection";
 "ConnectionTimeOut" = "Connection TimeOut! \n try again...";
+"serviceIsUnreachable" = "Unable to connect to server...";
 "lastUpdate"="Last Update: ";
 //MARK: - Symbol Details
 "bestBuyTitle" = "bestBuyTitle";
@@ -161,3 +162,5 @@
 //MARK: - Check version Strings
 "download" = "Download";
 
+//MARK: - Jail break check
+"isJailBrokenDescription" = "isJailBrokenDescription";
