--- a/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -164,3 +164,13 @@
 
 //MARK: - Jail break check
 "isJailBrokenDescription" = "سیستم عامل این دستگاه دستکاری شده است و تمامی مسوولیت هرگونه خطا و یا سوء استفاده احتمالی از این نرم افزار بر عهده کاربر می باشد. آیا مایل به ادامه استفاده می باشید؟";
+
+//Mark: - Alarm Filter
+
+"kind" = "نوع";
+"buy" = "خرید";
+"sell" = "فروش";
+"add" = "افزودن";
+"status" = "وضیعت";
+"sended" = "ارسال شده";
+"notSended" = "ارسال نشده";
