SABADBAN-256 8 add alarm services , add loadingview overlay,

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -176,3 +176,9 @@
 "status" = "status";
 "sended" = "Sended";
 "notSended" = "Not Sended";
+"duplicateAlarm" = "duplicateAlarm";
+"priceShouldntBeLastTrade" = "priceShouldntBeLastTrade";
+"deleteAlarmTitle" = "deleteAlarmTitle";
+"reallyWantToDeleteAlarm" = "reallyWantToDeleteAlarm";
+"alarmCountAlert" = "alarmCountAlert";
+"sellOrBuyAlarm" = "sellOrBuyAlarm";
