--- a/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
+++ b/trunk/SabadBan/SabadBan/fa.lproj/Localizable.strings
@@ -174,3 +174,9 @@
 "status" = "وضیعت";
 "sended" = "ارسال شده";
 "notSended" = "ارسال نشده";
+"duplicateAlarm" = "این آلارم قبلا اضافه شده است.";
+"priceShouldntBeLastTrade" = "قیمت انتخاب شده نباید برابر با آخرین قیمت معامله باشد.";
+"deleteAlarmTitle" = "حذف آلارم";
+"reallyWantToDeleteAlarm" = "آیا اطمینان دارید؟";
+"alarmCountAlert" = "شما فقط احازه تنظیم کردن ۲۰ آلارم خرید/فروش را دارید. برای اضافه کردن آلارم جدید، آلارم های قبلی را پاک نمایید.";
+"sellOrBuyAlarm" = "آلارم خرید یا فروش";
