JIRA-610 8 fix various bugs : 579, 610,611,613,625

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -89,6 +89,7 @@
 "deleteBuyAlertTitle" = "Delete Buy Information";
 "addedSuccessfuliToPortfolio" = "Added to Portfolio Successfully";
 "maximumNumberOfSymbolsReached" = "maximumNumberOfSymbolsReached";
+"atleastEnterOneSymbol" = "atleastEnterOneSymbol";
 
 //MARK: - AboutUs Strings
 
