SABADBAN-591 10 fix 581, 596, 605, 608, 623, 597(partial)

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -184,3 +184,6 @@
 "reallyWantToDeleteAlarm" = "reallyWantToDeleteAlarm";
 "alarmCountAlert" = "alarmCountAlert";
 "sellOrBuyAlarm" = "sellOrBuyAlarm";
+"alarmIsDeleted" = "alarmIsDeleted";
+"alarmIsAdded" = "alarmIsAdded";
+"alarmIsEdited" = "alarmIsEdited";
