SABADBAN-603 10.5 various bug fixes: 578, 594, 597, 603, 628,621,635

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -90,6 +90,9 @@
 "addedSuccessfuliToPortfolio" = "Added to Portfolio Successfully";
 "maximumNumberOfSymbolsReached" = "maximumNumberOfSymbolsReached";
 "atleastEnterOneSymbol" = "atleastEnterOneSymbol";
+"buyInfoDeleted" = "buyInfoDeleted";
+"buyInfoAdded" = "buyInfoDeleted";
+"buyInfoEdited" = "buyInfoDeleted";
 
 //MARK: - AboutUs Strings
 
