SABADBAN-580 8 add market status to index list page, fix portfolio list layouts and Index list Layouts. return to index page after sending contact us message

--- a/SabadBan/SabadBan/en.lproj/Localizable.strings
+++ b/SabadBan/SabadBan/en.lproj/Localizable.strings
@@ -155,7 +155,7 @@
 "pleaseEnterName" = "Please Enter Your Name!";
 "pleaseEnterSubject" = "Please Enter Message Subject";
 "pleaseEnterDetails" = "Please Enter Message Description";
-
+"messageSentSuccessfully" = "messageSentSuccessfully";
 
 //MARK: - Forget Password Strings
 
